--- a/css/style.css
+++ b/css/style.css
@@ -643,6 +643,7 @@ input[type="radio"].visually-hidden {
   position: relative;
 }
 
+/*
 .services__slider-control {
   margin: 0;
   padding: 0;
@@ -651,7 +652,7 @@ input[type="radio"].visually-hidden {
   padding-bottom: 145px;
   width: 420px;
 }
-
+*/
 
 /* services controls */
 
@@ -659,6 +660,11 @@ input[type="radio"].visually-hidden {
   display: flex;
   margin: 0;
   padding: 0;
+
+  padding-left: 140px;
+  padding-top: 80px;
+  padding-bottom: 145px;
+  width: 420px;
 
   height: 165px;
 
@@ -1566,3 +1572,433 @@ input[type="radio"].visually-hidden {
 .map {
   display: none;
 }
+
+
+/* inner page */
+
+.inner-page-header {
+  display: block;
+  width: 1440px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.inner-page-header__wrapper {
+  display: block;
+  width: 1160px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.inner-page-header__header {
+  margin: 0;
+  padding: 0;
+  padding-left: 60px;
+
+  padding-top: 40;
+
+  padding-bottom: 30px;
+
+  font-family: "Gilroy", Arial, sans-serif;
+  font-size: 47px;
+  line-height: 48px;
+  font-weight: 700;
+  letter-spacing: 0.47px;
+
+  color: #000000;
+}
+
+.inner-page-header__breadcrumbs-list {
+  display: flex;
+  justify-content: flex-start;
+  margin: 0;
+  padding: 0;
+  padding-left: 60px;
+  padding-bottom: 50px;
+
+  list-style: none;
+
+}
+
+.inner-page-header__breadcrumbs-item {
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding-left: 40px;
+}
+
+.inner-page-header__breadcrumbs-link {
+
+
+  font-family: "OpenSans", Arial, sans-serif;
+  font-size: 14x;
+  line-height: 24px;
+  font-weight: 400;
+  letter-spacing: 0.14px;
+  color: rgba(0, 0, 0, 0.3);
+
+  text-decoration: none;
+}
+
+.inner-page-header__breadcrumbs-link:hover {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.inner-page-header__breadcrumbs-link:active {
+  color: rgba(0, 0, 0, 0.1);
+}
+
+.catalog-wrapper {
+  display: flex;
+  width: 1440px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.search-filter {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+
+  width: 467px;
+
+  background-color: #ebebeb;
+}
+
+.search-filter__header-wrapper {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  height: 70px;
+
+  align-items: center;
+
+  background-color: #d9d9d9;
+}
+
+.search-filter__header {
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding-left: 200px;
+
+  font-family: "Gilroy", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 700;
+  letter-spacing: 3.2px;
+
+  text-transform: uppercase;
+
+  color: #000000;
+}
+
+.search-filter__form {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  padding-left: 200px;
+
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.search-filter__head-line-price {
+  display: block;
+  width: 200px;
+  height: 2px;
+  margin: 0;
+  padding: 0;
+  padding-top: 69px;
+  padding-bottom: 15px;
+
+  font-size: 0;
+  line-height: 0;
+}
+
+.search-filter__form-header-price {
+  display: block;
+  margin: 0;
+  padding: 0;
+
+  font-family: "Gilroy", Arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  letter-spacing: 0.18px;
+
+  color: #000000;
+}
+
+.search-filter__form-price-slider {
+  display: block;
+
+  height: 110px;
+
+}
+
+.search-filter__head-line-color {
+  display: block;
+  width: 200px;
+  height: 2px;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 15px;
+
+  font-size: 0;
+  line-height: 0;
+}
+
+.search-filter__form-header-color {
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 20px;
+
+  font-family: "Gilroy", Arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  letter-spacing: 0.18px;
+
+  color: #000000;
+}
+
+.search-filter__color-item {
+  display: block;
+  margin: 0;
+  padding: 0;
+
+  font-family: "OpenSans", Arial, sans-serif;
+  font-size: 14x;
+  line-height: 40px;
+  font-weight: 400;
+  letter-spacing: 0.14px;
+  color: #000000;
+}
+.search-filter__color-item--last {
+  padding-bottom: 20px;
+}
+
+.search-filter__head-line-bluetooth {
+  display: block;
+  width: 200px;
+  height: 2px;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 15px;
+
+  font-size: 0;
+  line-height: 0;
+}
+
+.search-filter__form-header-bluetooth {
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 20px;
+
+  font-family: "Gilroy", Arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  letter-spacing: 0.18px;
+
+  color: #000000;
+}
+.search-filter__form-radio {
+  display: block;
+  margin: 0;
+  padding: 0;
+
+  font-family: "OpenSans", Arial, sans-serif;
+  font-size: 14x;
+  line-height: 40px;
+  font-weight: 400;
+  letter-spacing: 0.14px;
+  color: #000000;
+}
+
+.search-filter__form-radio--last {
+  padding-bottom: 40px;
+}
+
+.search-filter__submit-btn {
+  display: flex;
+  margin: 0;
+  padding: 0;
+
+  width: 200px;
+  height: 40px;
+
+  align-items: center;
+  justify-content: center;
+
+  font-family: "Gilroy", Arial, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  color: #000000;
+  text-transform: uppercase;
+  letter-spacing: 3.6px;
+  text-decoration: none;
+
+  background-color: #ebebeb;
+  border: none;
+
+  position: relative;
+  z-index: 1;
+}
+
+.search-filter__submit-btn::after {
+  content: "";
+
+  width: 200px;
+  height: 8px;
+  background-color: #f0c52e;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+
+  position: absolute;
+  top: 16px;
+  left: 0;
+
+  z-index: -1;
+}
+
+.search-filter__submit-btn:hover::after {
+  transition: transform 0.25s ease;
+  transform: scaleY(5);
+}
+
+.search-filter__submit-btn:active {
+  width: 220px;
+  height: 40px;
+  background-color: #f0c52e;
+  background-repeat: no-repeat;
+  color: rgba(0, 0, 0, 0.3);
+  position: relative;
+  z-index: 1;
+}
+
+
+.search-result {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+
+  width: 973px;
+}
+
+.search-result__header-wrapper {
+  display: flex;
+  margin: 0;
+  padding: 0;
+
+  height: 70px;
+
+  justify-content: space-between;
+  align-items: center;
+
+  background-color: #ebebeb;
+}
+
+.search-result__header {
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding-left: 75px;
+
+  font-family: "Gilroy", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 700;
+  letter-spacing: 3.2px;
+
+  text-transform: uppercase;
+
+  color: #000000;
+}
+
+.search-result__sort-wrapper {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  padding-right: 140px;
+  width: 560px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.search-result__sort-type-list {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+
+
+  list-style: none;
+}
+
+.search-result__sort-type-item {
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding-right: 30px;
+}
+
+.search-result__sort-type-link {
+
+  font-family: "OpenSans", Arial, sans-serif;
+  font-size: 14x;
+  line-height: 28px;
+  font-weight: 400;
+  letter-spacing: 0.14px;
+  color: rgba(0, 0, 0, 0.3);
+
+  text-decoration: none;
+}
+
+.search-result__sort-type-link:hover {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.search-result__sort-type-link:active {
+  color: #000000;
+}
+
+.search-result__sort-type-link--current {
+  color: #000000;
+}
+
+.search-result__up-down-list {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+.search-result__up-down-item {
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding-left: 20px;
+}
+
+/* добавить состояния */
+
+
+.search-result__goods-list {
+  display: flex;
+  flex-wrap: wrap;
+
+  list-style: none;
+}
+
